Add JRE creation